fixed alignment of h1 in stylesheet

--- a/resumestyle.css
+++ b/resumestyle.css
@@ -44,7 +44,7 @@ p{
 	margin-left: 2%;
 	margin-right: 2%;
 }
-title{
+h1{
 	text-align: center;
 	font-size: 18px;
 	font-style: italic;
